Removing PreparedStatement